--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -2,3 +2,7 @@
   margin-top: 80px;
   margin-left: 350px;
 }
+
+.noScroll {
+  overflow: hidden;
+}
